k8s/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  namespace: laravel-app
  labels:
    app: laravel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: contact-app:v1
        imagePullPolicy: Never  # Important : utilise l'image locale
        ports:
        - containerPort: 80
          name: http
