k8s/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel-app
  labels:
    app: laravel
spec:
  type: NodePort
  selector:
    app: laravel
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
